--- a/src/pages/tokens/AdminCompanyAccount.module.scss
+++ b/src/pages/tokens/AdminCompanyAccount.module.scss
@@ -22,6 +22,8 @@
 .styledbox {
   border: 2px solid var(--neutral-1);
   max-width: 1024px;
+  max-width: 1024px;
+
   margin-left: auto;
   margin-right: auto;
   border-radius: 8px;
@@ -64,6 +66,10 @@
   @media (max-width: 480px) {
     font-size: 20px;
   }
+}
+
+.token {
+  min-width: 180px;
 }
 
 .companytokens {
